# logger

./: CMakeLists.txt  README.md  run.sh
liblogger/: CMakeLists.txt
liblogger/include/: Logger.h  LoggerFile.h  LoggerSocket.h  Severity.h
liblogger/src/: Logger.cpp  LoggerFile.cpp  LoggerSocket.cpp
logger_app/: CMakeLists.txt
logger_app/include/: Application.h  Console.h
logger_app/src/: Application.cpp  Console.cpp  main.cpp  server.cpp
logger_app/test/: Test.cpp  Test.h  test_main.cpp
